IMB-296: [BE] - Implement user deletion logic
